--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <!--Navigation Bar Start-->
-  <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top " aria-label="Second navbar example">
+  <nav class="navbar navbar-expand navbar-dark fixed-top" aria-label="Second navbar example">
     <div class="container">
       <a class="navbar-brand " href="index.html">Warung Hati</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample02"
@@ -27,7 +27,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Menu</a>
           </li>
         </ul>
       </div>
@@ -84,12 +84,27 @@
   </div>
   <!--End of Slideshow-->
   <!--Content-->
-  <div class="content-main">
+  <div class="content-about text-center">
     <h1>Who are we?</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate nihil earum voluptatum temporibus neque a vero maiores distinctio repudiandae! Aperiam unde dignissimos officiis ratione ad iusto placeat, earum consectetur voluptas?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate nihil earum voluptatum temporibus neque a
+      vero maiores distinctio repudiandae! Aperiam unde dignissimos officiis ratione ad iusto placeat, earum consectetur
+      voluptas?</p>
+  </div>
+  <div class="content-about text-center">
+    <h1>Our Food</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate nihil earum voluptatum temporibus neque a
+      vero maiores distinctio repudiandae! Aperiam unde dignissimos officiis ratione ad iusto placeat, earum consectetur
+      voluptas?</p>
+  </div>
+  <div class="content-about text-center">
+    <h1>Our Drink</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate nihil earum voluptatum temporibus neque a
+      vero maiores distinctio repudiandae! Aperiam unde dignissimos officiis ratione ad iusto placeat, earum consectetur
+      voluptas?</p>
   </div>
   <!--Footer-->
 </body>
-<script src="script.js"></script>
+<script src="script.js">
+</script>
 
 </html>
