Renaming file extenesion to html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
       </div>
       <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
         <h1 class="">Lorem Ipsum</h1>
-        <h5 class="mt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt animi at debitis temporibus perspiciatis
+        <h5 class="mt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt animi at debitis temporibus
+          perspiciatis
           dicta odit velit beatae quis corporis asperiores corrupti dolorum, veniam vero? Deserunt, adipisci
           consequatur. Deleniti, accusamus!</h5>
       </div>
@@ -76,7 +77,29 @@
   <div class="px-4 py-5 my-3 text-center">
     <h1 class="display-5 fw-bold">Who are we?</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero commodi velit quo placeat similique dolorem qui natus, iure architecto itaque dicta sint atque tempora impedit. Architecto labore quae blanditiis error!</p>
+      <p class="lead mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero commodi velit quo placeat
+        similique dolorem qui natus, iure architecto itaque dicta sint atque tempora impedit. Architecto labore quae
+        blanditiis error!</p>
     </div>
   </div>
-  <?php include('footer.php') ?>
+  <!--Footer-->
+  <div class="footer border-top">
+    <hr>
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
+            <use xlink:href="#twitter" />
+          </svg></a></li>
+      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
+            <use xlink:href="#instagram" />
+          </svg></a></li>
+      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
+            <use xlink:href="#facebook" />
+          </svg></a></li>
+    </ul>
+  </div>
+
+</body>
+<script src="script.js">
+</script>
+
+</html>
