--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="menu.php">Menu</a>
+            <a class="nav-link" href="menu.html">Menu</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="">Menu</a>
@@ -39,14 +39,6 @@
   <!--End of Navbar-->
   <!--Slideshow start-->
   <div id="bestofall" class="carousel slide " data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-    </div>
     <div class="carousel-inner">
       <div class="carousel-item active c-slide">
         <img class="img-carousel c-img"
@@ -82,24 +74,18 @@
         blanditiis error!</p>
     </div>
   </div>
-  <!--Footer-->
-  <div class="footer border-top">
-    <hr>
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-            <use xlink:href="#twitter" />
-          </svg></a></li>
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-            <use xlink:href="#instagram" />
-          </svg></a></li>
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-            <use xlink:href="#facebook" />
-          </svg></a></li>
-    </ul>
+  <div class="hungry p-5">
+    <h1 class="fw-bold display-5">Thirsty? Hungy?</h1>
   </div>
-
+  <!--Footer-->
+  <div class="footer" style="margin-top: 25px;">
+    <footer>
+      <div class="container"></div>
+    </footer>
+  </div>
 </body>
 <script src="script.js">
+
 </script>
 
 </html>
