--- a/menu.html
+++ b/menu.html
@@ -27,7 +27,7 @@
             <a class="nav-link" aria-current="page" href="index.php">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="menu.php">Menu</a>
+            <a class="nav-link active" href="menu.html">Menu</a>
           </li>
         </ul>
       </div>
@@ -37,20 +37,6 @@
 
   
   <!--Footer-->
-  <div class="footer border-top">
-    <hr>
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-            <use xlink:href="#twitter" />
-          </svg></a></li>
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-            <use xlink:href="#instagram" />
-          </svg></a></li>
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-            <use xlink:href="#facebook" />
-          </svg></a></li>
-    </ul>
-  </div>
 
 </body>
 <script src="script.js">
