--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
       </div>
       <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
         <h1 class="">Lorem Ipsum</h1>
-        <h5 class="mt-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt animi at debitis temporibus
+        <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
+          consectetur adipisicing elit. Incidunt animi at debitis temporibus
           perspiciatis
           dicta odit velit beatae quis corporis asperiores corrupti dolorum, veniam vero? Deserunt, adipisci
           consequatur. Deleniti, accusamus!</h5>
@@ -65,8 +66,9 @@
     </div>
   </div>
   <!--End of Slideshow-->
+  
   <!--Content-->
-  <div class="px-4 py-5 my-3 text-center">
+  <div class="px-4 py-5 my-1 text-center">
     <h1 class="display-5 fw-bold">Who are we?</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero commodi velit quo placeat
@@ -74,8 +76,25 @@
         blanditiis error!</p>
     </div>
   </div>
-  <div class="hungry p-5">
-    <h1 class="fw-bold display-5">Thirsty? Hungy?</h1>
+  <div class="hungry p-4 text-center">
+    <h1 class="fw-bold mb-4 display-5">Already Thirsty? Hungy? or both?</h1>
+    <a href="menu.html">
+      <button class="align-middle">Click me</button>
+    </a>
+  </div>
+  <div class="px-4 py-5 my-1 text-center">
+    <h1 class="display-5 fw-bold">Contact</h1>
+    <div class="container mt-3">
+      <div class="row">
+        <div class="col" style="background-color: aquamarine;">
+          <p>ey</p>
+        </div>
+        <div class="col"></div>
+        <div class="col"></div>
+        <div class="col"></div>
+      </div>
+    </div>
+  </div>
   </div>
   <!--Footer-->
   <div class="footer" style="margin-top: 25px;">
