--- a/index.html
+++ b/index.html
@@ -44,24 +44,40 @@
         <img class="img-carousel c-img"
           src="https://images.unsplash.com/photo-1476224203421-9ac39bcb3327?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
           class="d-block w-100 " alt="...">
+          <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
+            <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Incidunt animi at debitis temporibus
+              perspiciatis
+              dicta odit velit beatae quis corporis asperiores corrupti dolorum, veniam vero? Deserunt, adipisci
+              consequatur. Deleniti, accusamus!</h5>
+          </div>
       </div>
       <div class="carousel-item c-slide">
         <img class="img-carousel c-img"
           src="https://images.unsplash.com/photo-1499028344343-cd173ffc68a9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
           class="d-block w-100" alt="...">
+          <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
+            <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Incidunt animi at debitis temporibus
+              perspiciatis
+              dicta odit velit beatae quis corporis asperiores corrupti dolorum, veniam vero? Deserunt, adipisci
+              consequatur. Deleniti, accusamus!</h5>
+          </div>
       </div>
       <div class="carousel-item c-slide">
         <img class="img-carousel c-img"
           src="https://images.unsplash.com/photo-1577303935007-0d306ee638cf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=840&q=80"
           class="d-block w-100" alt="...">
+          <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
+            <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Incidunt animi at debitis temporibus
+              perspiciatis
+              dicta odit velit beatae quis corporis asperiores corrupti dolorum, veniam vero? Deserunt, adipisci
+              consequatur. Deleniti, accusamus!</h5>
+          </div>
       </div>
       <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
         <h1 class="">Lorem Ipsum</h1>
-        <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
-          consectetur adipisicing elit. Incidunt animi at debitis temporibus
-          perspiciatis
-          dicta odit velit beatae quis corporis asperiores corrupti dolorum, veniam vero? Deserunt, adipisci
-          consequatur. Deleniti, accusamus!</h5>
       </div>
     </div>
   </div>
@@ -77,7 +93,7 @@
     </div>
   </div>
   <div class="hungry p-4 text-center">
-    <h1 class="fw-bold mb-4 display-5">Already Thirsty? Hungy? or both?</h1>
+    <h1 class="fw-bold mb-4 display-5">Our menu</h1>
     <a href="menu.html">
       <button class="align-middle">Click me</button>
     </a>
