Updating all index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://kit.fontawesome.com/959a4c3f11.css" crossorigin="anonymous">
   <title>Home</title>
 </head>
 
@@ -44,37 +45,37 @@
         <img class="img-carousel c-img"
           src="https://images.unsplash.com/photo-1476224203421-9ac39bcb3327?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
           class="d-block w-100 " alt="...">
-          <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
-            <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Incidunt animi at debitis temporibus
-              perspiciatis
-              dicta odit velit beatae quis corporis asperiores corrupti dolorum, veniam vero? Deserunt, adipisci
-              consequatur. Deleniti, accusamus!</h5>
-          </div>
+        <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
+          <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Incidunt animi at debitis temporibus
+            perspiciatis
+            dicta odit velit beatae quis corporis asperiores corrupti dolorum, veniam vero? Deserunt, adipisci
+            consequatur. Deleniti, accusamus!</h5>
+        </div>
       </div>
       <div class="carousel-item c-slide">
         <img class="img-carousel c-img"
           src="https://images.unsplash.com/photo-1499028344343-cd173ffc68a9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
           class="d-block w-100" alt="...">
-          <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
-            <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Incidunt animi at debitis temporibus
-              perspiciatis
-              dicta odit velit beatae quis corporis asperiores corrupti dolorum, veniam vero? Deserunt, adipisci
-              consequatur. Deleniti, accusamus!</h5>
-          </div>
+        <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
+          <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Incidunt animi at debitis temporibus
+            perspiciatis
+            dicta odit velit beatae quis corporis asperiores corrupti dolorum, veniam vero? Deserunt, adipisci
+            consequatur. Deleniti, accusamus!</h5>
+        </div>
       </div>
       <div class="carousel-item c-slide">
         <img class="img-carousel c-img"
           src="https://images.unsplash.com/photo-1577303935007-0d306ee638cf?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=840&q=80"
           class="d-block w-100" alt="...">
-          <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
-            <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
-              consectetur adipisicing elit. Incidunt animi at debitis temporibus
-              perspiciatis
-              dicta odit velit beatae quis corporis asperiores corrupti dolorum, veniam vero? Deserunt, adipisci
-              consequatur. Deleniti, accusamus!</h5>
-          </div>
+        <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
+          <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Incidunt animi at debitis temporibus
+            perspiciatis
+            dicta odit velit beatae quis corporis asperiores corrupti dolorum, veniam vero? Deserunt, adipisci
+            consequatur. Deleniti, accusamus!</h5>
+        </div>
       </div>
       <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
         <h1 class="">Lorem Ipsum</h1>
@@ -82,22 +83,88 @@
     </div>
   </div>
   <!--End of Slideshow-->
-  
-  <!--Content-->
-  <div class="px-4 py-5 my-1 text-center">
-    <h1 class="display-5 fw-bold">Who are we?</h1>
-    <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero commodi velit quo placeat
-        similique dolorem qui natus, iure architecto itaque dicta sint atque tempora impedit. Architecto labore quae
-        blanditiis error!</p>
+
+  <!--Quick About us-->
+  <div class="px-4 py-5 my-1" style="background-color: aqua;">
+    <h1 class="display-5 fw-bold text-center">Who are we?</h1>
+    <div class="container my-5">
+      <div class="row">
+        <div class="col">
+          <img class="img-thumbnail" alt="" src="img/img (1).jpg">
+        </div>
+        <div class="col px-4">
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam libero facilis excepturi nulla possimus
+            corrupti provident ipsa officiis nesciunt assumenda illum velit in ex, aliquam aperiam qui ipsum eaque cum.
+          </p>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="hungry p-4 text-center">
-    <h1 class="fw-bold mb-4 display-5">Our menu</h1>
-    <a href="menu.html">
-      <button class="align-middle">Click me</button>
-    </a>
+  <!--End Quick about us-->
+
+  <!--Best Pick-->
+  <div class="p-4 py-5 my-5">
+    <h1 class="fw-bold mb-4 display-5 text-center">Our Top Pick</h1>
+    <div class="container">
+      <ul class="nav justify-content-center nav-pills py-3">
+        <li class="nav-item">
+          <a class="nav-link" data-bs-toggle="pill" href="#drink">Drink</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" data-bs-toggle="pill" href="#food">Food</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-bs-toggle="pill" href="#apetizer">Apetizer</a>
+        </li>
+      </ul>
+      <!--Tabs-->
+      <div class="tab-content">
+        <div class="tab-pane active" id="food">
+          <div class="container">
+            <div class="row g-3">
+              <div class="col">
+                <div class="card">
+                  <div class="card-body">
+                    This is some text within a card body.
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <img class="card-img-top rounded" src="img/img (100).png" alt="">
+                  <div class="card-img-overlay mx-2 my-3">
+                    <h3 class="best-title text-white card-title">felis bibendum</h3>
+                    <p class="blockquote-footer text-white-50 mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque eu ultrices vitae auctor eu augue.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <div class="card-body">
+                    This is some text within a card body.
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <div class="card-body">
+                    This is some text within a card body.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tab-pane" id="drink">
+          <p>Test2</p>
+        </div>
+        <div class="tab-pane" id="apetizer">
+          <p>Test3</p>
+        </div>
+      </div>
+    </div>
   </div>
+  <!--End of Best Pick-->
   <div class="px-4 py-5 my-1 text-center">
     <h1 class="display-5 fw-bold">Contact</h1>
     <div class="container mt-3">
