--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div id="bestofall" class="carousel slide " data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active c-slide">
-        <img class="img-carousel c-img" src="img2/1. Front Page/Bubur Madura.png" class="d-block w-100 " alt="...">
+        <img class="img-carousel c-img" src="img/1. Front Page/Bubur Madura.png" class="d-block w-100 " alt="...">
         <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
           <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
             consectetur adipisicing elit. Incidunt animi at debitis temporibus
@@ -54,7 +54,7 @@
         </div>
       </div>
       <div class="carousel-item c-slide">
-        <img class="img-carousel c-img" src="img2/1. Front Page/Es Kuwut Bali.png" class="d-block w-100" alt="...">
+        <img class="img-carousel c-img" src="img/1. Front Page/Es Kuwut Bali.png" class="d-block w-100" alt="...">
         <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
           <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
             consectetur adipisicing elit. Incidunt animi at debitis temporibus
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div class="carousel-item c-slide">
-        <img class="img-carousel c-img" src="img2/1. Front Page/Nasi Campur Bali 2.png" class="d-block w-100" alt="...">
+        <img class="img-carousel c-img" src="img/1. Front Page/Nasi Campur Bali 2.png" class="d-block w-100" alt="...">
         <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
           <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
             consectetur adipisicing elit. Incidunt animi at debitis temporibus
@@ -109,10 +109,10 @@
   <!--End Quick about us-->
 
   <!--Best Pick-->
-  <div class="py-3" style="background-color: #ededed;">
-    <h1 class="fw-bold mb-4 display-5 text-center">Our Top Pick</h1>
+  <div class="py-4" style="background-color: #ededed;">
+    <h1 class="fw-bold mb-2 display-5 text-center">Our Top Pick</h1>
     <div class="container">
-      <ul class="nav justify-content-center nav-pills py-3">
+      <ul class="nav justify-content-center nav-pills py-3 g-4">
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="pill" href="#drink">Drink</a>
         </li>
@@ -137,13 +137,15 @@
               </div>
               <div class="col">
                 <div class="card">
-                  <img class="card-img-top rounded" src="img/img (100).png" alt="">
-                  <div class="card-img-overlay mx-2 my-3">
-                    <h3 class="best-title text-white card-title">felis bibendum</h3>
-                    <p class="blockquote-footer text-white-50 mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing
-                      elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque eu ultrices
-                      vitae auctor eu augue.</p>
-                  </div>
+                  <figure class="figure">
+                    <img src="img/2. Menu Utama/Gado-Gado 3.png" class="figure-img img-fluid rounded-top" alt="...">
+                    <div class="px-3 mt-2">
+                      <h4>Gado-Gado</h4>
+                      <p class="opacity-50 best-capt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam incidunt praesentium esse iure
+                        unde, in doloribus commodi fugiat nobis cupiditate repellendus expedita amet sunt vero assumenda
+                        nostrum voluptatum nisi! Eveniet?</p>
+                    </div>
+                  </figure>
                 </div>
               </div>
               <div class="col">
@@ -177,7 +179,7 @@
     <h1 class="display-5 fw-bold">Contact</h1>
     <div class="container mt-3">
       <div class="row">
-        <div class="col" style="background-color: aquamarine;">
+        <div class="col">
           <p>ey</p>
         </div>
         <div class="col"></div>
@@ -195,9 +197,10 @@
           <div class="col">
             <h4>Warung Hati</h4>
           </div>
-          <div class="col text-end">
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-square-facebook"></i>
+          <div class="col text-end gx-4">
+            <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
+            <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
+            <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
           </div>
         </div>
       </div>
