--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           <img class="img-thumbnail" alt="" src="img/img (1).jpg">
         </div>
         <div class="col px-4">
-          <h1 class="display-5 fw-bold text-center">Who are we?</h1>
-          <p class="text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          <h1 class="display-5 fw-bold">Who are we?</h1>
+          <p class="text-start lh-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et
             dolore magna aliqua. Sit amet porttitor eget dolor morbi. Etiam sit amet nisl purus in mollis nunc sed id.
             Adipiscing bibendum est ultricies integer quis auctor elit sed vulputate. Sed adipiscing diam donec
@@ -109,7 +109,7 @@
   <!--End Quick about us-->
 
   <!--Best Pick-->
-  <div class="py-4" style="background-color: #ededed;">
+  <div class="py-4">
     <h1 class="fw-bold mb-2 display-5 text-center">Our Top Pick</h1>
     <div class="container">
       <ul class="nav justify-content-center nav-pills py-3 g-4">
@@ -141,7 +141,8 @@
                     <img src="img/2. Menu Utama/Gado-Gado 3.png" class="figure-img img-fluid rounded-top" alt="...">
                     <div class="px-3 mt-2">
                       <h4>Gado-Gado</h4>
-                      <p class="opacity-50 best-capt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam incidunt praesentium esse iure
+                      <p class="opacity-50 best-capt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                        incidunt praesentium esse iure
                         unde, in doloribus commodi fugiat nobis cupiditate repellendus expedita amet sunt vero assumenda
                         nostrum voluptatum nisi! Eveniet?</p>
                     </div>
@@ -175,19 +176,21 @@
     </div>
   </div>
   <!--End of Best Pick-->
-  <div class="px-4 py-5 my-1 text-center">
-    <h1 class="display-5 fw-bold">Contact</h1>
-    <div class="container mt-3">
-      <div class="row">
+  <div class="px-4 py-5 my-1 ">
+    <h1 class="display-5 fw-bold text-center">Contact</h1>
+    <div class="container mt-5 text-center">
+      <div class="row py-4">
         <div class="col">
-          <p>ey</p>
+          <i class="fa-brands fa-whatsapp fa-8x"></i>
         </div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
+        <div class="col">
+          <i class="fa-regular fa-envelope fa-8x"></i>
+        </div>
+        <div class="col">
+          
+        </div>
       </div>
     </div>
-  </div>
   </div>
   <!--Footer-->
   <div class="footer">
