--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           <i class="fa-regular fa-envelope fa-8x"></i>
         </div>
         <div class="col">
-          
+          <i class="fa-sharp fa-regular fa-house fa-7x"></i>
         </div>
       </div>
     </div>
