--- a/index.html
+++ b/index.html
@@ -177,17 +177,30 @@
   </div>
   <!--End of Best Pick-->
   <div class="px-4 py-5 my-1 ">
-    <h1 class="display-5 fw-bold text-center">Contact</h1>
+    <h1 class="display-1 fw-bold text-center">Contact</h1>
+    <h3 class="display-5 text-center">For reservation and more know</h3>
     <div class="container mt-5 text-center">
-      <div class="row py-4">
+      <div class="row py-5">
         <div class="col">
-          <i class="fa-brands fa-whatsapp fa-8x"></i>
+          <span class="fa-stack fa-5x mb-4">
+            <i class="fa-solid fa-square fa-stack-2x"></i>
+            <i class="fa-brands fa-whatsapp fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4>(+62) 927 2194 196</h4>
         </div>
         <div class="col">
-          <i class="fa-regular fa-envelope fa-8x"></i>
+          <span class="fa-stack fa-5x mb-4">
+            <i class="fa-solid fa-square fa-stack-2x"></i>
+            <i class="fa-regular fa-envelope fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4>tambakarna@greendike.com</h4>
         </div>
         <div class="col">
-          <i class="fa-sharp fa-regular fa-house fa-7x"></i>
+          <span class="fa-stack fa-5x mb-4">
+            <i class="fa-solid fa-square fa-stack-2x"></i>
+            <i class="fa-regular fa-location-dot fa-stack-1x fa-inverse"></i>
+          </span>
+          <h4>Coming soon</h4>
         </div>
       </div>
     </div>
@@ -204,6 +217,7 @@
             <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
             <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
             <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
+            <i class="fa-brands fa-tiktok px-2 fa-xl"></i>
           </div>
         </div>
       </div>
