--- a/index.html
+++ b/index.html
@@ -44,33 +44,23 @@
   <div id="bestofall" class="carousel slide " data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active c-slide">
-        <img class="img-carousel c-img" src="img/1. Front Page/Bubur Madura.png" class="d-block w-100 " alt="...">
+        <img class="img-carousel c-img" src="img/1. Front Page/Nasi Campur Bali 2.png" class="d-block w-100 " alt="...">
         <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
-          <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
-            consectetur adipisicing elit. Incidunt animi at debitis temporibus
-            perspiciatis
-            dicta odit velit beatae quis corporis asperiores corrupti dolorum, veniam vero? Deserunt, adipisci
-            consequatur. Deleniti, accusamus!</h5>
         </div>
       </div>
       <div class="carousel-item c-slide">
         <img class="img-carousel c-img" src="img/1. Front Page/Es Kuwut Bali.png" class="d-block w-100" alt="...">
         <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
-          <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
-            consectetur adipisicing elit. Incidunt animi at debitis temporibus
-            perspiciatis
-            dicta odit velit beatae quis corporis asperiores corrupti dolorum, veniam vero? Deserunt, adipisci
-            consequatur. Deleniti, accusamus!</h5>
         </div>
       </div>
       <div class="carousel-item c-slide">
-        <img class="img-carousel c-img" src="img/1. Front Page/Nasi Campur Bali 2.png" class="d-block w-100" alt="...">
+        <img class="img-carousel c-img" src="img/1. Front Page/Bubur Madura.png" class="d-block w-100" alt="...">
         <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
-          <h5 class="mt-1 position-absolute top-50 start-10 translate-middle-y text-start">Lorem ipsum dolor sit amet,
-            consectetur adipisicing elit. Incidunt animi at debitis temporibus
-            perspiciatis
-            dicta odit velit beatae quis corporis asperiores corrupti dolorum, veniam vero? Deserunt, adipisci
-            consequatur. Deleniti, accusamus!</h5>
+        </div>
+      </div>
+      <div class="carousel-item c-slide">
+        <img class="img-carousel c-img" src="img/1. Front Page/Jajan Pasar 2.png" class="d-block w-100" alt="...">
+        <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
         </div>
       </div>
       <div class="caption carousel-caption position-absolute top-50 start-10 translate-middle-y text-start">
@@ -110,75 +100,78 @@
 
   <!--Best Pick-->
   <div class="py-4">
-    <h1 class="fw-bold mb-2 display-5 text-center">Our Top Pick</h1>
-    <div class="container">
-      <ul class="nav justify-content-center nav-pills py-3 g-4">
-        <li class="nav-item">
-          <a class="nav-link" data-bs-toggle="pill" href="#drink">Drink</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" data-bs-toggle="pill" href="#food">Food</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" data-bs-toggle="pill" href="#apetizer">Apetizer</a>
-        </li>
-      </ul>
-      <!--Tabs-->
-      <div class="tab-content">
-        <div class="tab-pane active" id="food">
-          <div class="container">
-            <div class="row g-3">
-              <div class="col">
-                <div class="card">
-                  <div class="card-body">
-                    This is some text within a card body.
-                  </div>
-                </div>
+    <h1 class="fw-bold mb-2 display-5 text-center">Our recommendation of</h1>
+    <!--Tabs-->
+    <div class="container my-3">
+      <div class="row">
+        <div class="col">
+          <h4>Food</h4>
+          <div class="card">
+            <figure class="figure">
+              <img src="img/2. Menu Utama/Gado-Gado 3.png" class="figure-img img-fluid rounded-top" alt="...">
+              <div class="px-3 mt-2">
+                <h4>Gado-Gado</h4>
+                <p class="opacity-50 best-capt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                  incidunt praesentium esse iure
+                  unde, in doloribus commodi fugiat nobis cupiditate repellendus expedita amet sunt vero assumenda
+                  nostrum voluptatum nisi! Eveniet?</p>
               </div>
-              <div class="col">
-                <div class="card">
-                  <figure class="figure">
-                    <img src="img/2. Menu Utama/Gado-Gado 3.png" class="figure-img img-fluid rounded-top" alt="...">
-                    <div class="px-3 mt-2">
-                      <h4>Gado-Gado</h4>
-                      <p class="opacity-50 best-capt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-                        incidunt praesentium esse iure
-                        unde, in doloribus commodi fugiat nobis cupiditate repellendus expedita amet sunt vero assumenda
-                        nostrum voluptatum nisi! Eveniet?</p>
-                    </div>
-                  </figure>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card">
-                  <div class="card-body">
-                    This is some text within a card body.
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card">
-                  <div class="card-body">
-                    This is some text within a card body.
-                  </div>
-                </div>
-              </div>
-            </div>
+            </figure>
           </div>
         </div>
-        <div class="tab-pane" id="drink">
-          <p>Test2</p>
+        <div class="col">
+          <h4>Drink</h4>
+          <div class="card">
+            <figure class="figure">
+              <img src="img/2. Menu Utama/Gado-Gado 3.png" class="figure-img img-fluid rounded-top" alt="...">
+              <div class="px-3 mt-2">
+                <h4>Gado-Gado</h4>
+                <p class="opacity-50 best-capt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                  incidunt praesentium esse iure
+                  unde, in doloribus commodi fugiat nobis cupiditate repellendus expedita amet sunt vero assumenda
+                  nostrum voluptatum nisi! Eveniet?</p>
+              </div>
+            </figure>
+          </div>
         </div>
-        <div class="tab-pane" id="apetizer">
-          <p>Test3</p>
+        <div class="col">
+          <h4>Snack</h4>
+          <div class="card">
+            <figure class="figure">
+              <img src="img/2. Menu Utama/Gado-Gado 3.png" class="figure-img img-fluid rounded-top" alt="...">
+              <div class="px-3 mt-2">
+                <h4>Gado-Gado</h4>
+                <p class="opacity-50 best-capt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                  incidunt praesentium esse iure
+                  unde, in doloribus commodi fugiat nobis cupiditate repellendus expedita amet sunt vero assumenda
+                  nostrum voluptatum nisi! Eveniet?</p>
+              </div>
+            </figure>
+          </div>
+        </div>
+        <div class="col">
+          <h4>Party</h4>
+          <div class="card">
+            <figure class="figure">
+              <img src="img/2. Menu Utama/Gado-Gado 3.png" class="figure-img img-fluid rounded-top" alt="...">
+              <div class="px-3 mt-2">
+                <h4>Gado-Gado</h4>
+                <p class="opacity-50 best-capt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                  incidunt praesentium esse iure
+                  unde, in doloribus commodi fugiat nobis cupiditate repellendus expedita amet sunt vero assumenda
+                  nostrum voluptatum nisi! Eveniet?</p>
+              </div>
+            </figure>
+          </div>
         </div>
       </div>
     </div>
   </div>
   <!--End of Best Pick-->
+  <!--Contact-->
   <div class="px-4 py-5 my-1 ">
     <h1 class="display-1 fw-bold text-center">Contact</h1>
-    <h3 class="display-5 text-center">For reservation and more know</h3>
+    <h3 class="display-5 text-center">For reservation and more information</h3>
     <div class="container mt-5 text-center">
       <div class="row py-5">
         <div class="col">
@@ -214,7 +207,9 @@
             <h4>Warung Hati</h4>
           </div>
           <div class="col text-end gx-4">
-            <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
+            <a href="https://www.w3schools.com">
+              <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
+            </a>
             <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
             <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
             <i class="fa-brands fa-tiktok px-2 fa-xl"></i>
