--- a/menu.html
+++ b/menu.html
@@ -34,10 +34,74 @@
     </div>
   </nav>
   <!--End of Navbar-->
+    <div class="py-4">
+    <h1 class="fw-bold mb-2 display-5 text-center">Our Top Pick</h1>
+    <div class="container">
+      <ul class="nav justify-content-center nav-pills py-3 g-4">
+        <li class="nav-item">
+          <a class="nav-link" data-bs-toggle="pill" href="#drink">Drink</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" data-bs-toggle="pill" href="#food">Food</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-bs-toggle="pill" href="#apetizer">Apetizer</a>
+        </li>
+      </ul>
+      <!--Tabs-->
+      <div class="tab-content">
+        <div class="tab-pane active" id="food">
+          <div class="container">
+            <div class="row g-3">
+              <div class="col">
+                <div class="card">
+                  <div class="card-body">
+                    This is some text within a card body.
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <figure class="figure">
+                    <img src="img/2. Menu Utama/Gado-Gado 3.png" class="figure-img img-fluid rounded-top" alt="...">
+                    <div class="px-3 mt-2">
+                      <h4>Gado-Gado</h4>
+                      <p class="opacity-50 best-capt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                        incidunt praesentium esse iure
+                        unde, in doloribus commodi fugiat nobis cupiditate repellendus expedita amet sunt vero assumenda
+                        nostrum voluptatum nisi! Eveniet?</p>
+                    </div>
+                  </figure>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <div class="card-body">
+                    This is some text within a card body.
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <div class="card-body">
+                    This is some text within a card body.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tab-pane" id="drink">
+          <p>Test2</p>
+        </div>
+        <div class="tab-pane" id="apetizer">
+          <p>Test3</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  
   <!--Footer-->
-
 </body>
 <script src="script.js">
 </script>
