--- a/index.html
+++ b/index.html
@@ -206,13 +206,19 @@
           <div class="col">
             <h4>Warung Hati</h4>
           </div>
-          <div class="col text-end gx-4">
-            <a href="https://www.w3schools.com">
+          <div class="col text-end">
+            <a href="https://twitter.com/?lang=id" aria-label="go to twitter" class="text-decoration-none">
               <i class="fa-brands fa-twitter px-2 fa-xl social"></i>
             </a>
-            <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
-            <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
-            <i class="fa-brands fa-tiktok px-2 fa-xl"></i>
+            <a href="https://twitter.com/?lang=id" aria-label="go to facebook" class="text-decoration-none">
+              <i class="fa-brands fa-square-facebook px-2 fa-xl social"></i>
+            </a>
+            <a href="https://twitter.com/?lang=id" aria-label="go to instagram" class="text-decoration-none">
+              <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
+            </a>
+            <a href="https://twitter.com/?lang=id" aria-label="go to tiktok" class="text-decoration-none">
+              <i class="fa-brands fa-tiktok px-2 fa-xl"></i>
+            </a>
           </div>
         </div>
       </div>
@@ -220,7 +226,6 @@
   </div>
 </body>
 <script src="script.js">
-
 </script>
 
 </html>
