--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="collapse navbar-collapse" id="navbarsExample02">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="menu.html">Menu</a>
@@ -217,7 +217,7 @@
               <i class="fa-brands fa-instagram px-2 fa-xl social"></i>
             </a>
             <a href="https://twitter.com/?lang=id" aria-label="go to tiktok" class="text-decoration-none">
-              <i class="fa-brands fa-tiktok px-2 fa-xl"></i>
+              <i class="fa-brands fa-tiktok px-2 fa-xl social"></i>
             </a>
           </div>
         </div>
