--- a/menu.html
+++ b/menu.html
@@ -62,47 +62,43 @@
         <a href="#party" class="nav-link" data-bs-toggle="tab">Party</a>
       </li>
     </ul>
-    <div>
-      <div class="tab-content mt-3">
-        <div class="tab-pane active show" id="primary">
-          <div class="container">
-            <div class="row">
-              <div class="col">
-                <div class="card">
-                  <div class="row g-3">
-                    <div class="col">
-                      <div class="card-body">
-                        <h5 class="card-title">Alice Liddel</h5>
-                        <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                      </div>
-                    </div>
-                    <div class="col-5">
-                        <img src="img/2. Menu Utama/Gado-Gado 3.png" class="card-img-top h-100" alt="...">
-                    </div>
-                  </div>
-              </div>
-              </div>
-              <div class="col">
-                
+    <div class="tab-content mt-3">
+      <div class="tab-pane active show" id="primary">
+        <div class="container">
+          <div class="row row-cols-2">
+            <!--Menu item-->
+            <div class="col">
+              <!--Card start here-->
+              <div class="row card-food">
+                <div class="col-9">
+                  <h3 class="">Lorem</h3>
+                  <p class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore fuga fugiat, quam, ex
+                    autem explicabo, tempore totam corporis earum odit unde aut. Ducimus error.</p>
+                  <p class="text-end">Rp50000</p>
+                </div>
+                <div class="col-3">
+                  <img src="img/2. Menu Utama/Asinan Betawi.png" class="food-card-img" style="object-fit: cover;">
+                </div>
               </div>
             </div>
+            <!--End of menu item-->
           </div>
         </div>
-        <div class="tab-pane" id="snack">
-          Test2
-        </div>
-        <div class="tab-pane" id="side">
-          Test3
-        </div>
-        <div class="tab-pane" id="vegetable">
-          Test4
-        </div>
-        <div class="tab-pane" id="drink">
-          Test5
-        </div>
-        <div class="tab-pane" id="party">
-          Test6
-        </div>
+      </div>
+      <div class="tab-pane" id="snack">
+        Test2
+      </div>
+      <div class="tab-pane" id="side">
+        Test3
+      </div>
+      <div class="tab-pane" id="vegetable">
+        Test4
+      </div>
+      <div class="tab-pane" id="drink">
+        Test5
+      </div>
+      <div class="tab-pane" id="party">
+        Test6
       </div>
     </div>
   </div>
