--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </nav>
   <!--End of Navbar-->
   <!--Slideshow start-->
-  <div id="bestofall" class="carousel slide " data-bs-ride="carousel">
+  <div id="bestofall" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active c-slide">
         <img class="img-carousel c-img" src="img/1. Front Page/Nasi Campur Bali 2.png" class="d-block w-100 " alt="...">
@@ -199,7 +199,7 @@
     </div>
   </div>
   <!--Footer-->
-  <div class="footer">
+  <div class="footer pt-3">
     <footer>
       <div class="container">
         <div class="row">
@@ -219,6 +219,10 @@
             <a href="https://twitter.com/?lang=id" aria-label="go to tiktok" class="text-decoration-none">
               <i class="fa-brands fa-tiktok px-2 fa-xl social"></i>
             </a>
+          </div>
+          <hr class="mt-1"/>
+          <div class="text-center">
+            <p>@copyright by Warung Hati. Designed by cold_rawon</p>
           </div>
         </div>
       </div>
